# TK-grpc

./: .gitignore  README.md  package-lock.json  package.json  requirements.txt  run_app.py  run_client.bat  run_client.sh
.github/workflows/: elixir.yml
Client/: App.py  ColorFilterConsumer.py  DogFilterConsumer.py  FacesFilterConsumer.py  SimilarityConsumer.py  SizeFilterConsumer.py  WeatherFilterConsumer.py  components.json  config.ini  requirements.txt  run_app.py  run_client.bat
Client/Client/: GRPCClient.py  RabbitMQClient.py  __init__.py
Client/ColorFilter/: Color.py  ColorFilter.py
Client/Connection/: GRPCConnection.py  GRPCStubProvider.py  RabbitMQConnection.py  __init__.py
Client/DogsFilter/: DogsBreedFilter.py
Client/FacesFilter/: FacesFilter.py
Client/Message/: Executor.py  MessageAbstracts.py  Query.py  Response.py  __init__.py
Client/Similarity/: SimilarityFilter.py
Client/SizeFilter/: SizeFilter.py
Client/Utils/: QueryUtils.py  Utils.py  filter.utils.ts
Client/WeatherFilter/: WeatherFilter.py
Client/animal/: __main__.py  animal_detection.py  animals.py  readme.md
Client/body/: __init__.py  __main__.py  load_image.py  similarity_measurement.py
Client/format/: __init__.py  __main__.py  available_formats.py  format_checker.py
Client/metadataServer/: MetadataConsumer.ts
Client/protos/: core-animal.proto  core-body.proto  core-color.proto  core-dogs.proto  core-faces.proto  core-format.proto  (+7 more)
ImageDownloader/: GoogleImagesDownloader.py  requirements.txt
iac/: main.tf  providers.tf  variables.tf
peopleServer/: .gitignore  CMakeLists.txt  README.md  conanfile.txt
peopleServer/src/: PeopleDetector.cpp  peopleServer.cpp  processRequest.cpp  processRequest.hpp
src/: build.sh  core-format.proto  core_format_pb2.py  core_format_pb2_grpc.py  old-start.sh  start.sh
text_server/: README.md  mix.exs
(+53 files in other folders)
